[tool.poetry]
name = "os4ml-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "os4ml_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
